[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/player/player.gd" type="Script" id=1]
[ext_resource path="res://scene/weapons/armed/pistol/pistol_a/pistol_a.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/weapons/armed/rifle/rifle_a/rifle_a.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/ui/hud/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/weapons/unarmed/unarmed.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/weapons/weapon_manager.gd" type="Script" id=6]
[ext_resource path="res://scene/weapons/armed/pistol/pistol_b/pistol_b.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/weapons/armed/rifle/rifle_b/rifle_b.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 0.8

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 0.8

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.9, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.9, 0 )
shape = SubResource( 2 )

[node name="CamRoot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="Camera" type="Camera" parent="CamRoot"]

[node name="RayCast" type="RayCast" parent="CamRoot/Camera"]
cast_to = Vector3( 0, 0, -100 )

[node name="Weapons" type="Spatial" parent="CamRoot"]
script = ExtResource( 6 )

[node name="Unarmed" parent="CamRoot/Weapons" instance=ExtResource( 5 )]

[node name="Pistol_A" parent="CamRoot/Weapons" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.209, -0.134, -0.448 )
visible = false

[node name="Rifle_A" parent="CamRoot/Weapons" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182, -0.099, -0.327 )
visible = false

[node name="Pistol_B" parent="CamRoot/Weapons" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.38, -0.22, -0.621 )

[node name="Rifle_B" parent="CamRoot/Weapons" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.368, -0.208, -0.585 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
